hack to fix bpm container not showing up in certain browsers

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -25,22 +25,16 @@
   top: 0;
   left: 0;
   background: #fff;
-  // transition: opacity 0.1s;
-  // z-index: 0;
-  // opacity: 0;
 
   &.songView {
     transform: translateX(-100%);
-    // z-index: 1;
   }
   &.modsView {
     transform: translateX(100%);
-    // z-index: 1;
   }
 
   &.active {
     transform: translateX(0%);
-    // opacity: 1;
   }
 
   &.logView1:not(.active) {
@@ -104,7 +98,6 @@
 
 .chartArea-container {
   width: 100%;
-  // height: 100%;
   overflow: auto;
   -webkit-overflow-scrolling: touch;
   padding: 0;
@@ -489,6 +482,7 @@
     &.chartView {
       .chartArea-container {
         display: block;
+        padding-top: 0;
       }
       .canvas-container {
         transform-origin: top;
